<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndrOLBG</string>

    <!-- basics -->
    <!-- string name="detail">Details</string -->
    <!-- string name="search">Search</string -->
    <string name="settings">Settings</string>
    <string name="about">About AndrOLBG</string>
    <string name="browser">OLBG on Web</string>

    <!-- main screen -->
    <string name="make_tip_button">Make a Tip</string>
    <string name="tip_history_button">Tip History</string>
    <string name="current_tips_button">Current</string>
    <string name="virtual_money">Virtual Money</string>
		
    <!-- tips menu -->
    <string name="horse_racing_title">Horse Racing</string>
    <string name="football_title">Football</string>
    <string name="golf_title">Golf</string>
    <string name="tennis_title">Tennis</string>
    <string name="rugby_title">Rugby</string>
    <string name="specials_title">Specials</string>
    <string name="cricket_title">Cricket</string>
    <string name="us_sports_title">US Sports</string>
    <string name="snooker_title">Snooker</string>
    <string name="motor_racing_title">Motor Racing</string>
    <string name="darts_title">Darts</string>
    <string name="boxing_title">Boxing</string>
	<string name="cycling_title">Cycling</string>
    <string name="rowing_title">Rowing</string>
	<string name="dogs_title">Dogs</string>
    <string name="athletics_title">Athletics</string>
		
    <string name="english_football_title">English Football</string>
    <string name="european_comps_title">European Comps</string>
    <string name="european_leagues_title">European Leagues</string>
    <string name="international_title">International</string>
    <string name="scottish_football_title">Scottish Football</string>
    <string name="world_leagues_title">World Leagues</string>
    <string name="championship_title">Championship</string>
    <string name="community_shield_title">Community Shield</string>
    <string name="conference_title">Conference</string>
    <string name="fa_cup_title">FA Cup</string>
    <string name="league_cup_title">League Cup</string>
    <string name="league_one_title">League One</string>
	<string name="league_two_title">League Two</string>
    <string name="premiership_title">Premiership</string>
		
    <string name="champ_league_title">Champ League</string>
	<string name="champ_league_qual_title">Champ League Qual</string>
    <string name="europa_league_title">Europa League</string>
    <string name="europa_league_qual_title">Europa League Qual</string>
		
    <string name="austrian_title">Austrian</string>
    <string name="belgian_title">Belgian</string>
    <string name="bulgarian_title">Bulgarian</string>
	<string name="croatian_title">Croatian</string>
    <string name="czech_republic_title">Czech Republic</string>
    <string name="danish_title">Danish</string>
    <string name="dutch_title">Dutch</string>
    <string name="dutch2_title">Dutch 2</string>
    <string name="finnish_title">Finnish</string>
    <string name="french_title">French</string>
    <string name="french2_title">French 2</string>
    <string name="german_title">German</string>
    <string name="german2_title">German 2</string>
    <string name="greek_title">Greek</string>
	<string name="hungarian_title">Hungarian</string>
	<string name="irish_title">Irish</string>
    <string name="israeli_title">Israeli</string>
    <string name="italian_title">Italian</string>
    <string name="italian_b_title">Italian B</string>
    <string name="latvian_title">Latvian</string>
    <string name="norwegian_title">Norwegian</string>
    <string name="polish_title">Polish</string>
	<string name="portuguese_title">Portuguese</string>
    <string name="romanian_title">Romanian</string>
    <string name="russian_title">Russian</string>
    <string name="serbian_title">Serbian</string>
    <string name="slovakian_title">Slovakian</string>
    <string name="slovenian_title">Slovenian</string>
    <string name="spanish_title">Spanish</string>
    <string name="spanish2_title">Spanish 2</string>
    <string name="spanish_cup_title">Spanish Cup</string>
    <string name="swedish_title">Swedish</string>
    <string name="swiss_title">Swiss</string>
	<string name="turkish_title">Turkish</string>
	<string name="ukranian_title">Ukranian</string>
    	
    <string name="asian_cup_title">Asian Cup</string>
    <string name="african_nations_cup_title">African Nations Cup</string>
    <string name="confederations_cup_title">Confederations Cup</string>
    <string name="copa_america_title">Copa America</string>
    <string name="euro_u21_title">Euro U21</string>
    <string name="olympics_title">Olympics</string>
    <string name="world_cup_finals_title">World Cup Finals</string>
	<string name="world_cup_qualifiers_title">World Cup Qualifiers</string>
		
    <string name="argentinian_apertura_title">Argentinian Apertura</string>
    <string name="argentinian_clausura_title">Argentinian Clausura</string>
    <string name="australian_title">Australian</string>
    <string name="brasilian_title">Brasilian</string>
    <string name="chilean_title">Chilean</string>
	<string name="j_league_title">J-League</string>
    <string name="mexican_title">Mexican</string>
	<string name="mls_title">MLS</string>
		
    <string name="scottish_prem_title">Scottish Prem</string>
    <string name="scottish1_title">Scottish 1</string>
    <string name="scottish2_title">Scottish 2</string>
    <string name="scottish3_title">Scottish 3</string>
	
	<string name="rugby_league_title">Rugby League</string>
    <string name="rugby_union_title">Rugby Union</string>
		
    <string name="baseball_title">Baseball</string>
    <string name="basketball_title">Basketball</string>
    <string name="nfl_title">NFL</string>
    <string name="nhl_title">NHL</string>

	<!-- make a tip -->
	<string name="pick_event">Pick An Event</string>
    <string name="pick_market">Pick A Market</string>
    <string name="make_selection">Make Your Selection</string>
    <string name="make_nap">Make it your NAP or NB</string>
    <string name="chk_nap">NAP</string>
    <string name="chk_nb">NB</string>
    <string name="tip_comment">Tip Comment (optional)</string>
    <string name="total_stake">Total Stake Amount</string>
	<string name="of_total">Of:</string>
	<string name="bet_type">Bet Type</string>
    <string name="bet_odds">Odds</string>
    <string name="confirm_tip">Confirm Tip</string>
	
    <!-- errors, warnings, info toasts -->
    <string name="err_none">OK</string>
    <string name="err_start">Communication not started</string>
    <string name="err_parse">Failed Login page parsing</string>
    <string name="err_server">Unable to contact OLBG.com. The website may be down or your Internet connection not working.</string>
    <string name="err_login">No Login information stored</string>
    <string name="err_login_failed">AndrOLBG can\'t log in.</string>
    <string name="err_login_failed_toast">AndrOLBG can\'t log in. AndrOLBG works offline. Check your Login settings or enable Internet connection.</string>
    <string name="err_unknown">Unknown error</string>
    <string name="err_comm">Unknown communication error</string>
    <string name="err_missing_auth">No username and/or password set.</string>
    <string name="err_wrong">Login information incorrect</string>
    <string name="err_maintenance">OLBG.com is down for maintenance.</string>
    <string name="err_license">You have not agreed to OLBG.com license agreement, so AndrOLBG can\'t load cache coordinates.</string>
    <string name="err_log_failed_server">AndrOLBG failed to post tip because server is not responding.</string>
    <string name="err_tip_post_failed">It seems that your tip was not posted. Please check it on OLBG.com.</string>
    <string name="warn_log_text_fill">Please fill in text for your tip.</string>
    <string name="info_tip_saved">AndrOLBG successfully posted the tip.</string>

    <!-- about -->
	<string name="about_version">Version</string>
	<string name="about_changelog">Changelog</string>
	<string name="about_donate">Donate</string>
  	<string name="about_detail">Details</string>
  	<string name="about_donation_more">Donate\ndevelopment</string>
  
    <!-- init -->
    <string name="init_olbg">OLBG.com</string>
    <string name="init_twitter">Twitter</string>
    <string name="init_username">Username</string>
    <string name="init_password">Password</string>
    <string name="init_login">Check and save Login</string>
    <string name="init_login_popup">Login</string>
    <string name="init_login_popup_working">Logging in…</string>
    <string name="init_login_popup_ok">Login OK</string>
    <string name="init_login_popup_failed">Login failed</string>
    <string name="init_login_popup_failed_reason">Login failed because of </string>
    <string name="init_twitter_authorize">Authorize AndrOLBG</string>
    <string name="init_twitter_publish">Publish status when a tip has been made</string>
    <string name="init_signature">Signature</string>
    <string name="init_signature_help_button">Help</string>
    <string name="init_signature_template_button">Insert Template</string>
    <string name="init_sigautoinsert">Insert signature automatically</string>
    <string name="init_details">Tip Details</string>
    <string name="init_autoload">Auto-loading of long description</string>
    <string name="init_other">Other Options</string>
    <string name="init_skin">Use light skin\n(Restart needed)</string>
    <string name="init_debug_title">Debug information</string>
    <string name="init_debug_note">AndrOLBG can generate a lot of debugging information. While this information is generally not useful for AndrOLBG users, developers may need to generate this information in order to analyze a bug. In this case, they will ask you to check the box below and send them the log file.</string>
    <string name="init_debug">Generate debug information</string>

	<!-- auth -->
	<string name="auth_twitter">Twitter</string>
	<string name="auth_authorize">authorize AndrOLBG</string>
	<string name="auth_start">Start authorization</string>
	<string name="auth_again">Start again</string>
	<string name="auth_pin_hint">PIN assigned by Twitter</string>
	<string name="auth_finish">Finish</string>
	
    <!-- next things -->
    <string name="legal_note">To use the services of OLBG.com, terms and conditions of the <a href="http://www.olbg.com/use.php">OLBG Terms of Use</a> have to be agreed.</string>
	<string name="quote">Make tips with your fingertips…</string>
  	<string name="powered_by">BenDod</string>
  	<string name="register_now">Don\'t have an acount? <a href="http://www.olbg.com/?tx160039">Register now!</a></string>
    <string name="support">Support: <a href="mailto:BenDod.Dev@gmail.com">BenDod.Dev@gmail.com</a></string>
  	<string name="twitter">Twitter: <a href="http://www.twitter.com/bendod_dev">BenDod_Dev</a></string>
	<string name="code">Code: <a href="https://github.com/BenDod/AndrOLBG">AndrOLBG on GitHub</a></string>
	<string name="about_twitter">Should <b>AndrOLBG</b> publish a new status on Twitter every time you make a tip?</string>
	<string name="about_auth_1">The following process allows <b>AndrOLBG</b> to access Twitter - if agreed.</string>
	<string name="about_auth_2">A click on the \"authorize AndrOLBG\" button will start the proccess.</string>
		
    <!-- changelog -->
    <string name="changelog">\n
    <b>New Features/Functions:</b>\n
    · Now you can make tip from your Android device\n
	· Horse tipping fix\n
	· Other minor bugs fix\n
	\n
    <b>Known Bugs/Issues:</b>\n
	· History and Current tips only on browser\n
	· Twitter are not supported yet\n
	\n</string>
    
</resources>
