<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical" >
	<ScrollView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:padding="4dip"
			android:orientation="vertical" >
		<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_marginTop="10dip"
				android:orientation="vertical" >
<!-- ** -->
			<RelativeLayout style="@style/separator_horizontal_layout" >
				<View style="@style/separator_horizontal" />
				<TextView style="@style/separator_horizontal_headline"
						android:text="@string/init_olbg" />
			</RelativeLayout>
			<TextView android:id="@+id/legal_note"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip"
					android:layout_marginBottom="5dip"
					android:layout_gravity="left"
					android:padding="3dip"
					android:textSize="14dip"
					android:linksClickable="true"
					android:text="@string/legal_note" />
			<TextView android:id="@+id/register_now"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:layout_marginBottom="5dip"
				android:layout_gravity="left"
				android:padding="3dip"
				android:textSize="14dip"
				android:linksClickable="true"
				android:text="@string/register_now" />
			<EditText style="@style/edittext_full"
					android:id="@+id/username"
					android:hint="@string/init_username" />
			<EditText style="@style/edittext_full"
					android:id="@+id/password"
					android:hint="@string/init_password"
					android:inputType="textPassword"/>
			<Button style="@style/button_full"
					android:id="@+id/log_me_in"
                    android:lines="2"
                    android:singleLine="false"
                    android:scrollHorizontally="false"
					android:text="@string/init_login" />
<!-- ** -->
			<RelativeLayout style="@style/separator_horizontal_layout" >
				<View style="@style/separator_horizontal" />
				<TextView style="@style/separator_horizontal_headline"
						android:text="@string/init_twitter" />
			</RelativeLayout>
			<TextView android:id="@+id/about_twitter"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip"
					android:layout_marginBottom="5dip"
					android:layout_gravity="left"
					android:padding="3dip"
					android:textSize="14dip"
					android:linksClickable="true"
					android:text="@string/about_twitter" />
			<Button style="@style/button_full"
					android:id="@+id/authorize_twitter"
					android:text="@string/init_twitter_authorize" />
			<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_margin="3dip"
					android:orientation="horizontal"
					android:padding="3dip" >
				<CheckBox android:id="@+id/twitter_option"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="left"
						android:padding="1px"
						android:gravity="center" />
				<TextView
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical"
						android:gravity="left"
						android:paddingRight="3dip"
						android:textSize="14dip"
						android:text="@string/init_twitter_publish" />
			</LinearLayout>
<!-- ** -->
			<RelativeLayout style="@style/separator_horizontal_layout" >
				<View style="@style/separator_horizontal" />
				<TextView style="@style/separator_horizontal_headline"
						android:text="@string/init_other" />
			</RelativeLayout>
			<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:layout_margin="3dip"
					android:orientation="vertical"
					android:padding="3dip" >
				<LinearLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal" >
					<CheckBox android:id="@+id/skin"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_gravity="left"
							android:padding="1px"
							android:gravity="center" />
					<TextView
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:layout_gravity="center_vertical"
							android:gravity="left"
							android:paddingRight="3dip"
							android:textSize="14dip"
							android:text="@string/init_skin" />
				</LinearLayout>
			</LinearLayout>
<!-- ** -->
			<RelativeLayout style="@style/separator_horizontal_layout" >
				<View style="@style/separator_horizontal" />
				<TextView
				    style="@style/separator_horizontal_headline"
					android:text="@string/init_debug_title" />
			</RelativeLayout>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:layout_marginBottom="5dip"
				android:layout_gravity="left"
				android:padding="3dip"
				android:textSize="14dip"
				android:linksClickable="true"
				android:text="@string/init_debug_note" />
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal" >
				<CheckBox android:id="@+id/debug"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="left"
					android:padding="1px"
					android:gravity="center" />
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:gravity="left"
					android:paddingRight="3dip"
					android:textSize="14dip"
					android:text="@string/init_debug" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
