<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="4dip"  >
    <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dip"
		android:orientation="vertical" >
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_marginTop="10dip"
			android:orientation="vertical" >
			<ImageView
				android:layout_width="200dip"
				android:layout_height="200dip"
				android:layout_margin="10dip"
				android:layout_gravity="center"
				android:gravity="center"
				android:scaleType="fitXY"
				android:src="@drawable/androlbg" />
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:layout_marginTop="5dip"
				android:layout_gravity="left"
				android:textSize="14dip"
				android:text="@string/quote" />
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:layout_marginBottom="5dip"
				android:layout_gravity="right"
				android:textSize="14dip"
				android:text="@string/powered_by" />
		</LinearLayout>
		<RelativeLayout style="@style/separator_horizontal_layout" >
			<View style="@style/separator_horizontal" />
			<TextView style="@style/separator_horizontal_headline"
				android:text="@string/about_version" />
		</RelativeLayout>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:layout_marginBottom="5dip"
			android:layout_gravity="left"
			android:textSize="14dip"
			android:textStyle="bold"
			android:id="@+id/about_version_string" />
		<RelativeLayout style="@style/separator_horizontal_layout" >
			<View style="@style/separator_horizontal" />
			<TextView style="@style/separator_horizontal_headline"
				android:text="@string/about_donate" />
		</RelativeLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dip"
			android:orientation="horizontal"
			android:gravity="center_horizontal" >
			<Button style="@style/button_full"
				android:id="@+id/donation_more"
				android:layout_width="280dip"
				android:singleLine="false"
				android:lines="2"
				android:onClick="donate"
				android:text="@string/about_donation_more" />
		</LinearLayout>
		<RelativeLayout style="@style/separator_horizontal_layout" >
			<View style="@style/separator_horizontal" />
			<TextView style="@style/separator_horizontal_headline"
				android:text="@string/about_detail" />
		</RelativeLayout>
		<TextView android:id="@+id/support"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:layout_marginBottom="5dip"
			android:layout_gravity="left"
			android:textSize="14dip"
			android:clickable="true"
			android:onClick="support"
			android:text="@string/support" />
		<TextView android:id="@+id/twitter"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:layout_marginBottom="5dip"
			android:layout_gravity="left"
			android:textSize="14dip"
			android:clickable="true"
			android:onClick="twitter"
			android:text="@string/twitter" />
		<TextView android:id="@+id/code"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:layout_marginBottom="5dip"
			android:layout_gravity="left"
			android:textSize="14dip"
			android:clickable="true"
			android:onClick="code"
			android:text="@string/code" />
		<RelativeLayout style="@style/separator_horizontal_layout" >
			<View style="@style/separator_horizontal" />
			<TextView style="@style/separator_horizontal_headline"
				android:text="@string/about_changelog" />
		</RelativeLayout>
		<TextView android:id="@+id/changelog"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="7dip"
			android:layout_gravity="left"
			android:paddingLeft="3dip"
			android:textSize="12dip"
            android:linksClickable="true"
			android:text="@string/changelog" />
	</LinearLayout>
</ScrollView>
